// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toaster renders correctly with all kind of toast 1`] = `
[
  .cache-6874q2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wp3con-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-ctt4i4-StyledText {
  color: #005da3;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="Toastify__toast-body"
    role="alert"
  >
    <div>
      <div
        class="cache-6874q2-Stack ehpbis70"
      >
        <svg
          class="cache-wp3con-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          />
        </svg>
        <span
          class="cache-ctt4i4-StyledText e13y3mga0"
        >
          This is an info
        </span>
      </div>
    </div>
  </div>,
  .cache-6874q2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wp3con-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-m1oxgt-StyledText {
  color: #22674e;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="Toastify__toast-body"
    role="alert"
  >
    <div>
      <div
        class="cache-6874q2-Stack ehpbis70"
      >
        <svg
          class="cache-wp3con-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M11,16.5L6.5,12L7.91,10.59L11,13.67L16.59,8.09L18,9.5L11,16.5Z"
          />
        </svg>
        <span
          class="cache-m1oxgt-StyledText e13y3mga0"
        >
          This is a success
        </span>
      </div>
    </div>
  </div>,
  .cache-6874q2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wp3con-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-o1ibdt-StyledText {
  color: #ac2740;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="Toastify__toast-body"
    role="alert"
  >
    <div>
      <div
        class="cache-6874q2-Stack ehpbis70"
      >
        <svg
          class="cache-wp3con-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15H13V17H11V15ZM11 7H13V13H11V7ZM12 2C6.47 2 2 6.5 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C5.85752 19.9997 6.95991 20.7362 8.17317 21.2388C9.38642 21.7413 10.6868 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 10.6868 21.7413 9.38642 21.2388 8.17317C20.7362 6.95991 19.9997 5.85752 19.0711 4.92893C18.1425 4.00035 17.0401 3.26375 15.8268 2.7612C14.6136 2.25866 13.3132 2 12 2ZM12 20C9.87827 20 7.84344 19.1571 6.34315 17.6569C4.84285 16.1566 4 14.1217 4 12C4 9.87827 4.84285 7.84344 6.34315 6.34315C7.84344 4.84285 9.87827 4 12 4C14.1217 4 16.1566 4.84285 17.6569 6.34315C19.1571 7.84344 20 9.87827 20 12C20 14.1217 19.1571 16.1566 17.6569 17.6569C16.1566 19.1571 14.1217 20 12 20Z"
          />
        </svg>
        <span
          class="cache-o1ibdt-StyledText e13y3mga0"
        >
          This is an error
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`Toaster renders correctly with all kind of toast 2`] = `
<DocumentFragment>
  .cache-se1d56-ToastContainer {
  top: 100px;
  right: calc(0% + 16px);
}

.cache-1p019kl-toast {
  border-radius: 4px;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
  min-height: 44px;
  margin-bottom: 16px;
}

.cache-1p019kl-toast .Toastify__toast-body {
  margin: 0;
  padding: 0;
}

.cache-1p019kl-toast.Toastify__toast--success {
  background-color: #cbf3e4;
  color: #22674e;
}

.cache-1p019kl-toast.Toastify__toast--success .Toastify__progress-bar {
  background-color: #45d19f;
}

.cache-1p019kl-toast.Toastify__toast--info {
  background-color: #d5edff;
  color: #005da3;
}

.cache-1p019kl-toast.Toastify__toast--info .Toastify__progress-bar {
  background-color: #0078d2;
}

.cache-1p019kl-toast.Toastify__toast--error {
  background-color: #fbe4e9;
  color: #ac2740;
}

.cache-1p019kl-toast.Toastify__toast--error .Toastify__progress-bar {
  background-color: #dd3252;
}

.cache-6874q2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wp3con-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-ctt4i4-StyledText {
  color: #005da3;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1klpfky-CloseButtonWrapper {
  background: none;
  border: none;
  cursor: pointer;
  color: inherit;
  padding: 0;
  margin: 0;
  margin-bottom: 16px;
}

.cache-rfv5sc-StyledIcon-sizeStyles-IconWithLeftMargin {
  vertical-align: middle;
  fill: currentColor;
  height: 18px;
  width: 18px;
  min-width: 18px;
  min-height: 18px;
  margin-left: 8px;
}

.cache-m1oxgt-StyledText {
  color: #22674e;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-o1ibdt-StyledText {
  color: #ac2740;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="Toastify"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-right cache-se1d56-ToastContainer"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--info Toastify__toast--close-on-click cache-1p019kl-toast Toastify--animate Toastify__bounce-enter--top-right"
        id="info"
        style="--nth: 1; --len: 3;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="cache-6874q2-Stack ehpbis70"
            >
              <svg
                class="cache-wp3con-StyledIcon-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                />
              </svg>
              <span
                class="cache-ctt4i4-StyledText e13y3mga0"
              >
                This is an info
              </span>
            </div>
          </div>
        </div>
        <button
          class="cache-1klpfky-CloseButtonWrapper e1eb63991"
          type="button"
        >
          <svg
            class="e1eb63990 cache-rfv5sc-StyledIcon-sizeStyles-IconWithLeftMargin e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
        <div
          aria-hidden="false"
          aria-label="notification timer"
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--info"
          role="progressbar"
          style="animation-duration: 6000ms; animation-play-state: paused; opacity: 1;"
        />
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success Toastify__toast--close-on-click cache-1p019kl-toast Toastify--animate Toastify__bounce-enter--top-right"
        id="success"
        style="--nth: 2; --len: 3;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="cache-6874q2-Stack ehpbis70"
            >
              <svg
                class="cache-wp3con-StyledIcon-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M11,16.5L6.5,12L7.91,10.59L11,13.67L16.59,8.09L18,9.5L11,16.5Z"
                />
              </svg>
              <span
                class="cache-m1oxgt-StyledText e13y3mga0"
              >
                This is a success
              </span>
            </div>
          </div>
        </div>
        <button
          class="cache-1klpfky-CloseButtonWrapper e1eb63991"
          type="button"
        >
          <svg
            class="e1eb63990 cache-rfv5sc-StyledIcon-sizeStyles-IconWithLeftMargin e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
        <div
          aria-hidden="false"
          aria-label="notification timer"
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
          role="progressbar"
          style="animation-duration: 6000ms; animation-play-state: paused; opacity: 1;"
        />
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error Toastify__toast--close-on-click cache-1p019kl-toast Toastify--animate Toastify__bounce-enter--top-right"
        id="error"
        style="--nth: 3; --len: 3;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="cache-6874q2-Stack ehpbis70"
            >
              <svg
                class="cache-wp3con-StyledIcon-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 15H13V17H11V15ZM11 7H13V13H11V7ZM12 2C6.47 2 2 6.5 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C5.85752 19.9997 6.95991 20.7362 8.17317 21.2388C9.38642 21.7413 10.6868 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 10.6868 21.7413 9.38642 21.2388 8.17317C20.7362 6.95991 19.9997 5.85752 19.0711 4.92893C18.1425 4.00035 17.0401 3.26375 15.8268 2.7612C14.6136 2.25866 13.3132 2 12 2ZM12 20C9.87827 20 7.84344 19.1571 6.34315 17.6569C4.84285 16.1566 4 14.1217 4 12C4 9.87827 4.84285 7.84344 6.34315 6.34315C7.84344 4.84285 9.87827 4 12 4C14.1217 4 16.1566 4.84285 17.6569 6.34315C19.1571 7.84344 20 9.87827 20 12C20 14.1217 19.1571 16.1566 17.6569 17.6569C16.1566 19.1571 14.1217 20 12 20Z"
                />
              </svg>
              <span
                class="cache-o1ibdt-StyledText e13y3mga0"
              >
                This is an error
              </span>
            </div>
          </div>
        </div>
        <button
          class="cache-1klpfky-CloseButtonWrapper e1eb63991"
          type="button"
        >
          <svg
            class="e1eb63990 cache-rfv5sc-StyledIcon-sizeStyles-IconWithLeftMargin e5nqbfp0"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
        <div
          aria-hidden="false"
          aria-label="notification timer"
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          role="progressbar"
          style="animation-duration: 6000ms; animation-play-state: paused; opacity: 1;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
